Added more pictures and picturedata

--- a/analog-gauge-reader-working/test.ipynb
+++ b/analog-gauge-reader-working/test.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "1ac56ae2-4dca-4371-8e65-0757ff1cbf89",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-10T09:43:33.205206700Z",
-     "start_time": "2024-04-10T09:43:33.082759700Z"
+     "end_time": "2024-04-10T13:57:23.366878200Z",
+     "start_time": "2024-04-10T13:57:23.303742100Z"
     }
    },
    "outputs": [
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='e81c8c1c-a8b5-4ab2-8f36-1ca9b7950f6a'></div>"
+      "text/html": "<div id='6c019b08-0c22-4f33-88ea-24913b1613a1'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -74,7 +74,8 @@
     "    return circle_image\n",
     "\n",
     "\n",
-    "show_image(find_circles(param2=150))"
+    "show_image(find_circles(param2=150))\n",
+    "\n"
    ]
   },
   {
