added json reader for parameters

--- a/analog-gauge-reader-working/test.ipynb
+++ b/analog-gauge-reader-working/test.ipynb
@@ -47,13 +47,10 @@
     "    return np.sqrt((x2 - 370) ** 2 + (y2 - 398) ** 2)\n",
     "\n",
     "results = []\n",
+    "all_results = []\n",
     "\n",
     "def find_circles():\n",
     "    # Make the image copy inside this function\n",
-    "    maxRadius = 0\n",
-    "    minRadius = 0\n",
-    "    center_x = 0\n",
-    "    center_y = 0\n",
     "    distance = 0\n",
     "    \n",
     "    for barometer in barometers:\n",
@@ -81,18 +78,20 @@
     "                    if len(circles) > 1: \n",
     "                        circles = np.round(circles[0, :]).astype(\"int\")\n",
     "                        a, b, c = circles.shape\n",
-    "                        avg_x, avg_y, avg_r = avg_circles(circles, b, file)\n",
+    "                        avg_x, avg_y, avg_r = avg_circles(circles, b)\n",
     "                        distance = dist_2_pts(avg_x, avg_y)\n",
     "                    else:\n",
     "                        x, y, r = circles[0][0]\n",
     "                        distance = dist_2_pts(x_center, y_center)\n",
     "                results.append((param1, param2, distance))\n",
+    "                sorted_results = sorted(results, key=lambda x_: x_[2])\n",
+    "                \n",
+    "                all_results.append(sorted_results)\n",
     "                    \n",
-    "        return results\n",
+    "        return all_results\n",
     "\n",
     "find_circles()\n",
-    "sorted_results = sorted(results, key=lambda x: x[2])\n",
-    "sorted_results[:10]"
+    "all_results[12:]"
    ],
    "outputs": [
     {
