--- a/analog-gauge-reader-working/test.ipynb
+++ b/analog-gauge-reader-working/test.ipynb
@@ -49,7 +49,7 @@
     "results = []\n",
     "all_results = []\n",
     "\n",
-    "def find_circles():\n",
+    "def test_parameters():\n",
     "    # Make the image copy inside this function\n",
     "    distance = 0\n",
     "    \n",
@@ -58,7 +58,7 @@
     "        max_radius = barometer['maxRadius']\n",
     "        x_center = barometer['x']\n",
     "        y_center = barometer['y'] \n",
-    "        file_name = barometer['file_name']\n",
+    "        file_name = barometer['name']\n",
     "        \n",
     "        file_type='png'\n",
     "        img = cv2.imread('%s.%s' % (file_name, file_type))\n",
@@ -90,7 +90,7 @@
     "                    \n",
     "        return all_results\n",
     "\n",
-    "find_circles()\n",
+    "test_parameters()\n",
     "all_results[12:]"
    ],
    "outputs": [
